# claude-agent-sdk-rust

./: .gitattributes  CLAUDE.md  Cargo.toml  NOTICE  README.md
docs/: cartridge-spec.md
examples/: list_sessions.rs
src/: cartridge.rs  chain.rs  error.rs  input.rs  lib.rs  mcp.rs  mutations.rs  parse.rs  paths.rs  session_resume.rs  sessions.rs  store.rs  store_import.rs  store_mirror.rs  store_read.rs  testing.rs  types.rs
src/runtime/: api.rs  client.rs  message_parser.rs  mod.rs  query.rs  transport.rs
src/types/: config.rs  content.rs  hook.rs  mcp.rs  message.rs  mod.rs  options.rs  permission.rs  sandbox.rs  session_info.rs  store.rs
tests/: cartridge.rs  live_cli.rs  mutations.rs  parity_errors_ratelimit.rs  parity_message_parser.rs  parity_mirror.rs  parity_mutations.rs  parity_store_conformance.rs  parity_store_import.rs  parity_store_read.rs  parity_summary.rs  parity_types.rs  raw_session_entries.rs  runtime.rs  sessions.rs  transport_errors.rs
tests/fixtures/: transcript.jsonl
