[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A faithful Rust port of Anthropic's claude-agent-sdk (Python): read local Claude Code session history and drive the `claude` runtime over stream-json."
license = "MIT"
readme = "README.md"
repository = "https://github.com/sramki/claude-agent-sdk-rust"
keywords = ["claude", "agent", "sdk", "jsonl", "sessions"]
categories = ["api-bindings", "parsing", "filesystem"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
unicode-normalization = "0.1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"
futures-core = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "io-util"] }
tokio-stream = "0.1"
async-trait = "0.1"
